# meshthatworks

./: Cargo.toml  LICENSE  Makefile  README.md
crates/mtw-api/: Cargo.toml
crates/mtw-api/src/: lib.rs
crates/mtw-cache/: Cargo.toml
crates/mtw-cache/src/: advisor.rs  lib.rs  safetensors_layout.rs
crates/mtw-cli/: Cargo.toml
crates/mtw-cli/src/: catalog.rs  dashboard.rs  doctor.rs  main.rs
crates/mtw-core/: Cargo.toml
crates/mtw-core/src/: active_model.rs  echo.rs  health.rs  identity.rs  infer.rs  layer.rs  layer_forward.rs  lib.rs  pair.rs  peers.rs  serve.rs  status.rs
crates/mtw-core/tests/: layer_alpn.rs  layer_forward_alpn.rs
crates/mtw-engine/: Cargo.toml
crates/mtw-engine/examples/: layer_split_demo.rs  partial_forward.rs
crates/mtw-engine/src/: layer_split.rs  lib.rs  mock.rs  swiftlm.rs
docs/: ARCHITECTURE.md  BASELINES.md  ENGINE_RESEARCH.md
patches/: qwen3moe-expert-tap.patch  qwen3moe-swiftlm-topk-override.patch  sharpai-mlx-cmake-hookup.patch
scripts/: bootstrap.sh  chat.py  chat_api.py  claude-code.sh  demo.sh  install.sh
website/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
website/app/: globals.css  layout.tsx  page.tsx
website/components/: Bullet.tsx  CopyableCommand.tsx  Footer.tsx  Nav.tsx  Section.tsx
