[package]
name = "mtw-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OpenAI-compatible HTTP API on localhost:9337, SSE token streaming."

[lints]
workspace = true

[dependencies]
