[package]
name = "mtw-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Usage-adaptive expert caching: rolling histogram, hot/warm/cold tiering, RAM budget."

[lints]
workspace = true

[dependencies]
