[package]
name = "mtw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line entry point: `mtw serve|pair|join|status|models|download`."

[lints]
workspace = true

[[bin]]
name = "mtw"
path = "src/main.rs"

[dependencies]
mtw-core.workspace = true
mtw-engine.workspace = true
mtw-api.workspace = true
iroh.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
