[package]
name = "mtw-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Mesh coordination: peer discovery, shard assignment, request routing."

[lints]
workspace = true

[dependencies]
iroh.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
