[package]
name = "mtw-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Per-node inference engine: MLX FFI, SSD expert streaming, KV cache, activation profiling."

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "time", "io-util"] }
reqwest.workspace = true
tracing.workspace = true
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "process", "time"] }
